--- a/PruebasSecurity/src/main/resources/application.properties
+++ b/PruebasSecurity/src/main/resources/application.properties
@@ -1,6 +1,5 @@
-
-spring.datasource.url=jdbc:mysql://localhost:3306/motoCenter
+spring.datasource.url=jdbc:mysql://localhost/seguridad?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.batch.job.enabled=false
+spring.jpa.hibernate.ddl-auto=none
